# vcf-to-obsidian-vcf-contacts

./: .buildinfo  .gitignore  =0.9.0  LICENSE  Makefile  README.md  development.html  genindex.html  implementation-comparison.html  index.html  installation.html  integration.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  test_bash_script.sh  test_simple.py  test_vcf_to_obsidian.py  testing.html  usage.html  vcf-support.html  vcf-to-obsidian.sh  vcf_to_obsidian.py  vobject.py
.github/workflows/: docs.yml  docs2.yml
_modules/: index.html
_modules/vcf_to_obsidian/: cli.html  filename_generator.html  markdown_writer.html  vcf_converter.html  vcf_reader.html
_sources/: index.rst.txt  testing.rst.txt
autoapi/vcf_to_obsidian/: index.html
bash_tests/: README.md  run_all_tests.sh  test_cli_options.sh  test_content_validation.sh  test_file_processing.sh  test_filename_priority.sh  test_special_characters.sh  test_uid_photo_functionality.sh  test_vcard_support.sh
docs/: development.md  implementation-comparison.md  installation.md  testing.md  usage.md  vcf-support.md
docx/: README.md
docx/source/: development.rst  (+5 more)
nodejs-vcf-to-obsidian/: .gitignore  README.md  cli.js  package-lock.json  package.json
scripts/: vcf-to-obsidian.sh  vcf_to_obsidian.py
templates/: default.md.j2
test_data/: README.md
tests/: conftest.py  test_command_line.py  test_markdown_writing.py  test_new_cli_options.py  test_vcf_reading.py
vcf_to_obsidian/: __init__.py  cli.py  filename_generator.py  markdown_writer.py  vcf_converter.py  vcf_reader.py
(+60 files in other folders)
